updating about me and English CV

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ form {display: inline;}
   <!-- Header -->
   <header class="w3-container w3-padding-128 w3-center" id="home">
     <h1 class="w3-xxlarge"><b>Eran Schweitzer</b></h1>
-    <p>PhD Student<br>School of Electrical, Computer and Engergy Engineering<br>Arizona State University</p>
+    <p>Electrical Engineer<p>
     <img src="images/EranPic.jpg" class="w3-image w3-hide-large w3-round" style="display:block;width:120px;margin:auto; ">
     <!--img src="images/wetplate.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333"-->
     <div class="w3-center w3-padding-16 w3-hide-large"> 
@@ -117,12 +117,12 @@ form {display: inline;}
     <h2>About</h2>
     <!--<hr class="w3-opacity"> -->
     <p> 
-I am currently a PhD student in the 
+    I am currently project engineer in the Energy Technologies department of <a href="https://www.steag-energyservices.com" target="_blank" class="w3-hover-white" style="text-decoration:none"><b>STEAG Energy Services</b></a>. 
+    I recently completed my PhD at the 
 <a href="http://scaglione.engineering.asu.edu/" target="_blank" class="w3-hover-white" style="text-decoration:none"><b>SINE lab</b></a> 
-at Arizona State University, under Professor Anna Scaglione.
-My research interests fall broadly under the umbrella of power system modeling and analysis. 
-Most of my work has focuses on the generation and validation of synthetic test cases based on analysis of real power systems. 
-I am also quite interested in solution approaches to the power flow and optimal power flow problems, as well as co-simulation paradigms.
+at Arizona State University, under Professor Anna Scaglione. 
+My professional interests fall broadly under the umbrella of power system modeling, analysis, and optimization.
+I have worked on several linearizations to the power flow problem, both global and local solver solutions to the optimal power flow, and several developments of unit commitment models.
     </p>
   <!-- End About Section -->
   </div>
@@ -133,6 +133,12 @@ I am also quite interested in solution approaches to the power flow and optimal 
     <!--<hr class="w3-opacity"> -->
     <h3> Journals </h3>
     <ul class="w3-ul">
+      <li>
+	      <span class="Author">E. Schweitzer, S. Saha, A. Scaglione, N. G. Johnson, and D. Arnold</span>
+	      <span class="Title">Lossy DistFlow Formulation for Single and Multiphase Radial Feeders</span>
+	      <span class="Journal">IEEE Transactions on Power Systems</span>&nbsp;
+	      <span class="Date">2019</span>
+      </li>
       <li>
 	      <span class="Author">E. Schweitzer, A. Scaglione</span>
 	      <span class="Title">A Mathematical Programing Solution for Automatic Generation of Synthetic Power Flow Cases</span>
@@ -219,7 +225,7 @@ I am also quite interested in solution approaches to the power flow and optimal 
       <!--<p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Chicago, US</p>-->
       <!--<p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>-->
       <!--<p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: eran &#60;dot&#62; schweitzer &#60;at&#62; asu.edu </p>-->
-      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: eran.schweitzer@asu.edu </p>
+      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: eranschweitzer@gmail.com </p>
     </div>
     
      <!-- Google Map -->
