--- a/index.html
+++ b/index.html
@@ -117,12 +117,14 @@ form {display: inline;}
     <h2>About</h2>
     <!--<hr class="w3-opacity"> -->
     <p> 
-    I am currently project engineer in the Energy Technologies department of <a href="https://www.steag-energyservices.com" target="_blank" class="w3-hover-white" style="text-decoration:none"><b>STEAG Energy Services</b></a>. 
-    I recently completed my PhD at the 
+    I am a power systems engineer with the <a href="https://www.pnnl.gov/" target="_blank" class="w3-hover-white" style="text-decoration:none"><b>Pacific Northwest National Lab</b></a>,
+    where I work on projects ranging from microgrids with GridLAB-D to national transmission planning, interconnection processeses for renewables, co-simulation and some cyber security.
+    My research and professional interests fall broadly under the umbrella of power system modeling, analysis, and optimization.
+    I previously worked in Germany for <a href="https://www.steag-energyservices.com" target="_blank" class="w3-hover-white" style="text-decoration:none"><b>STEAG Energy Services</b></a> on
+    interconnection of large and small generators, industrial power system design (from concept to construction), and led the development of an in-house co-simulation energy optimization tool for industrial consumers using JuMP and Julia. 
+    Prior to that I was a PhD student at the 
 <a href="http://scaglione.engineering.asu.edu/" target="_blank" class="w3-hover-white" style="text-decoration:none"><b>SINE lab</b></a> 
-at Arizona State University, under Professor Anna Scaglione. 
-My professional interests fall broadly under the umbrella of power system modeling, analysis, and optimization.
-I have worked on several linearizations to the power flow problem, both global and local solver solutions to the optimal power flow, and several developments of unit commitment models.
+at Arizona State University, under Professor Anna Scaglione (since moved to Cornell Tech).
     </p>
   <!-- End About Section -->
   </div>
